--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "kopay",
   "type": "module",
   "scripts": {
-    "start": "dotenv -- bin/start.js"
+    "start": "dotenv -- bin/start.js",
+    "dev": "dotenv -- nodemon bin/start.js"
   },
   "dependencies": {
     "@googleapis/calendar": "^0.2.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "dotenv-cli": "^4.0.0",
     "eslint": "^8.2.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.4.1"
   },
   "prettier": {
